--- a/web/html/calabHeader.html
+++ b/web/html/calabHeader.html
@@ -4,7 +4,7 @@
 		<tr>
 			<td class="subhdrBG" align="left" width="543" background="images/background.gif" height="60" td="">
 				<div align="left">
-					<img height="80" src="images/appLogo-CALAB2.gif" width="203">
+					<img height="83" src="images/appLogo-nanolab.gif" width="304">
 				</div>
 			</td>
 
