--- a/web/webHelp/About caNanoLab.2.7.html
+++ b/web/webHelp/About caNanoLab.2.7.html
@@ -195,7 +195,7 @@
           </tr>
         </table>
       </div>
-      <div class="Body_Text_Indent_2"><a name="1156936">The Report</a> or Publication File page appears (see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.1.html#1122108', '');">Document Update Page</a></span>).</div>
+      <div class="Body_Text_Indent_2"><a name="1156936">The Report</a> or Publication File page appears (see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.10.html#1139239', '');">Update Report Page</a></span> OR <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.11.html#1138948', '');">Update Publication Page</a></span>).</div>
       <div class="Numbered_List_outer" style="margin-left: 18pt;">
         <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1156937">
           <tr style="vertical-align: baseline;">
