--- a/web/webHelp/Documents.9.10.html
+++ b/web/webHelp/Documents.9.10.html
@@ -48,7 +48,7 @@
           </tr>
         </table>
       </div>
-      <div class="Body_Text"><a name="1139244">The [Document] Update page opens when you click any of the hypertext file name links </a>on the <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.7.html#1131363', '');">Report Page</a></span> or the <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.8.html#1131749', '');">Publication Page</a></span>.</div>
+      <div class="Body_Text"><a name="1139244">The [Document] Update page opens when you click any of the hypertext file name links </a>on the <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.7.html#1131363', '');">Report Page</a></span> or the <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.8.html#1142741', '');">Publication Page</a></span>.</div>
       <div class="Body_Text"><a name="1139251">The page that displays is the same Report page on which the document was submitted </a>into caNanoLab. Details are described in the following table. On this page, you can review or edit report information.</div>
       <table id="1139255" class="Table_-_List" style="text-align: left;" cellspacing="2">
         <caption></caption>
@@ -111,7 +111,6 @@
           </td>
         </tr>
       </table>
-      <div class="Body_Text"><a name="1139235">&nbsp;</a></div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
@@ -123,6 +122,7 @@
           WWHAddRelatedTopic("Searching Nanoparticle Documents", "caNanoLab", "Documents.9.5.html#1135396");
           WWHAddRelatedTopic("Submitting a Nanoparticle Sample", "caNanoLab", "Nanoparticles.4.5.html#1151789");
           WWHAddRelatedTopic("Update Publication Page", "caNanoLab", "Documents.9.11.html#1138948");
+          WWHAddRelatedTopic("Deleting a Document", "caNanoLab", "Documents.9.12.html#1124634");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
