--- a/web/webHelp/Documents.9.11.html
+++ b/web/webHelp/Documents.9.11.html
@@ -48,7 +48,7 @@
           </tr>
         </table>
       </div>
-      <div class="Body_Text"><a name="1136714">The [Document] Update page opens when you click any of the hypertext file name links </a>on the <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.7.html#1131363', '');">Report Page</a></span> or the <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.8.html#1131749', '');">Publication Page</a></span>.</div>
+      <div class="Body_Text"><a name="1136714">The [Document] Update page opens when you click any of the hypertext file name links </a>on the <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.7.html#1131363', '');">Report Page</a></span> or the <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.8.html#1142741', '');">Publication Page</a></span>.</div>
       <div class="Body_Text"><a name="1136721">The page that displays is the same Publication page on which the document was </a>submitted into caNanoLab. Details are described in the following table. On this page you can review or edit publication information.</div>
       <table id="1136836" class="Table_-_List" style="text-align: left;" cellspacing="2">
         <caption></caption>
@@ -341,7 +341,6 @@
           </td>
         </tr>
       </table>
-      <div class="Body_Text"><a name="1115859">&nbsp;</a></div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
@@ -353,6 +352,7 @@
           WWHAddRelatedTopic("Update Report Page", "caNanoLab", "Documents.9.10.html#1139239");
           WWHAddRelatedTopic("Searching Nanoparticle Documents", "caNanoLab", "Documents.9.5.html#1135396");
           WWHAddRelatedTopic("Submitting a Nanoparticle Sample", "caNanoLab", "Nanoparticles.4.5.html#1151789");
+          WWHAddRelatedTopic("Editing Documents", "caNanoLab", "Documents.9.9.html#1139185");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
