--- a/web/webHelp/Documents.9.3.html
+++ b/web/webHelp/Documents.9.3.html
@@ -334,10 +334,10 @@
         </tr>
         <tr>
           <td id="tc1132026" style="background-color: WhiteSmoke; border-bottom-color: #000000; border-bottom-style: none; border-bottom-width: 1px; border-left-color: #000000; border-left-style: none; border-left-width: 1px; border-right-color: #000000; border-right-style: none; border-right-width: 1px; border-top-color: #000000; border-top-style: none; border-top-width: 1px; padding-bottom: 6px; padding-left: 6px; padding-right: 6px; padding-top: 6px; vertical-align: top;">
-            <div class="Table_Text" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; margin-top: 6.0pt; text-transform: none; vertical-align: baseline;"><a name="1132026">Start Page</a></div>
+            <div class="Table_Text" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; margin-top: 6.0pt; text-transform: none; vertical-align: baseline;"><a name="1132026">Start Page/End </a>Page</div>
           </td>
           <td id="tc1132028" style="background-color: WhiteSmoke; border-bottom-color: #000000; border-bottom-style: none; border-bottom-width: 1px; border-left-color: #000000; border-left-style: none; border-left-width: 1px; border-right-color: #000000; border-right-style: none; border-right-width: 1px; border-top-color: #000000; border-top-style: none; border-top-width: 1px; padding-bottom: 6px; padding-left: 6px; padding-right: 6px; padding-top: 6px; vertical-align: top;">
-            <div class="Table_Text" style="margin-top: 6.0pt;"><a name="1132028">Enter the page number on which the publication begins.</a></div>
+            <div class="Table_Text" style="margin-top: 6.0pt;"><a name="1132028">Enter the page numbers for the publication.</a></div>
           </td>
         </tr>
         <tr>
@@ -418,6 +418,8 @@
           WWHAddRelatedTopic("Documents Overview", "caNanoLab", "Documents.9.2.html#1123962");
           WWHAddRelatedTopic("Submitting a Report", "caNanoLab", "Documents.9.4.html#1138842");
           WWHAddRelatedTopic("Searching Nanoparticle Documents", "caNanoLab", "Documents.9.5.html#1135396");
+          WWHAddRelatedTopic("Documents Category", "caNanoLab", "Navigation%20Tree%20Managing_Char.8.8.html#1546804");
+          WWHAddRelatedTopic("Editing Documents", "caNanoLab", "Documents.9.9.html#1139185");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
