--- a/web/webHelp/Documents.9.4.html
+++ b/web/webHelp/Documents.9.4.html
@@ -186,6 +186,8 @@
           WWHAddRelatedTopic("Documents Overview", "caNanoLab", "Documents.9.2.html#1123962");
           WWHAddRelatedTopic("Submitting a Publication", "caNanoLab", "Documents.9.3.html#1131845");
           WWHAddRelatedTopic("Searching Nanoparticle Documents", "caNanoLab", "Documents.9.5.html#1135396");
+          WWHAddRelatedTopic("Documents Category", "caNanoLab", "Navigation%20Tree%20Managing_Char.8.8.html#1546804");
+          WWHAddRelatedTopic("Editing Documents", "caNanoLab", "Documents.9.9.html#1139185");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
