--- a/web/webHelp/Documents.9.6.html
+++ b/web/webHelp/Documents.9.6.html
@@ -80,7 +80,7 @@
             <div class="Table_Text" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1104871">T</a>itle</div>
           </td>
           <td id="tc1104873" style="background-color: WhiteSmoke; border-bottom-color: #000000; border-bottom-style: none; border-bottom-width: 1px; border-left-color: #000000; border-left-style: none; border-left-width: 1px; border-right-color: #000000; border-right-style: none; border-right-width: 1px; border-top-color: #000000; border-top-style: none; border-top-width: 1px; padding-bottom: 6px; padding-left: 6px; padding-right: 6px; padding-top: 6px; vertical-align: top;">
-            <div class="Table_Text"><a name="1104873">Click the hypertext link to open the </a><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.7.html#1131363', '');">Report Page</a></span> or <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.8.html#1131749', '');">Publication Page</a></span> where you can view, edit, print or export details about the document. </div>
+            <div class="Table_Text"><a name="1104873">Click the hypertext link to open the </a><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.7.html#1131363', '');">Report Page</a></span> or <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.8.html#1142741', '');">Publication Page</a></span> where you can view, edit, print or export details about the document. </div>
           </td>
         </tr>
         <tr>
@@ -117,7 +117,7 @@
         </tr>
         <tr>
           <td id="tc1128949" style="background-color: White; border-bottom-color: #000000; border-bottom-style: none; border-bottom-width: 1px; border-left-color: #000000; border-left-style: none; border-left-width: 1px; border-right-color: #000000; border-right-style: none; border-right-width: 1px; border-top-color: #000000; border-top-style: none; border-top-width: 1px; padding-bottom: 6px; padding-left: 6px; padding-right: 6px; padding-top: 6px; vertical-align: top;">
-            <div class="Table_Text" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1128949">Create D</a>ata</div>
+            <div class="Table_Text" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1128949">Create D</a>ate</div>
           </td>
           <td id="tc1128951" style="background-color: White; border-bottom-color: #000000; border-bottom-style: none; border-bottom-width: 1px; border-left-color: #000000; border-left-style: none; border-left-width: 1px; border-right-color: #000000; border-right-style: none; border-right-width: 1px; border-top-color: #000000; border-top-style: none; border-top-width: 1px; padding-bottom: 6px; padding-left: 6px; padding-right: 6px; padding-top: 6px; vertical-align: top;">
             <div class="Table_Text"><a name="1128951">Date the </a>document was submitted</div>
@@ -132,7 +132,7 @@
           </td>
         </tr>
       </table>
-      <div class="Body_Text"><a name="1104852">For any hit, click on the hypertext link in the </a><span style="font-weight: bold;">Report Title</span> column (first) to open the associated report or file. See <span class="Emphasis" style="color: #515186;">Document Update Page</span>.</div>
+      <div class="Body_Text"><a name="1104852">For any hit, click on the hypertext link in the </a><span style="font-weight: bold;">Report Title</span> column (first) to open the associated report or file.</div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
@@ -143,9 +143,10 @@
           //
           WWHAddRelatedTopic("Searching Nanoparticle Documents", "caNanoLab", "Documents.9.5.html#1135396");
           WWHAddRelatedTopic("Report Page", "caNanoLab", "Documents.9.7.html#1131363");
-          WWHAddRelatedTopic("Publication Page", "caNanoLab", "Documents.9.8.html#1131749");
+          WWHAddRelatedTopic("Publication Page", "caNanoLab", "Documents.9.8.html#1142741");
           WWHAddRelatedTopic("Update Report Page", "caNanoLab", "Documents.9.10.html#1139239");
           WWHAddRelatedTopic("Update Publication Page", "caNanoLab", "Documents.9.11.html#1138948");
+          WWHAddRelatedTopic("Editing Documents", "caNanoLab", "Documents.9.9.html#1139185");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
