--- a/web/webHelp/Documents.9.7.html
+++ b/web/webHelp/Documents.9.7.html
@@ -106,9 +106,10 @@
 
           // Add related topics
           //
-          WWHAddRelatedTopic("Publication Page", "caNanoLab", "Documents.9.8.html#1131749");
-          WWHAddRelatedTopic("Update Report Page", "caNanoLab", "Documents.9.10.html#1139239");
+          WWHAddRelatedTopic("Publication Page", "caNanoLab", "Documents.9.8.html#1142741");
           WWHAddRelatedTopic("Update Publication Page", "caNanoLab", "Documents.9.11.html#1138948");
+          WWHAddRelatedTopic("Update Report Page", "caNanoLab", "Documents.9.10.html#1139239");
+          WWHAddRelatedTopic("Editing Documents", "caNanoLab", "Documents.9.9.html#1139185");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
