--- a/web/webHelp/Documents.9.8.html
+++ b/web/webHelp/Documents.9.8.html
@@ -28,10 +28,10 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="Documents.9.1.html#1131749">Managing Documents</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Documents.9.5.html#1131749">Searching Nanoparticle Documents</a> &gt; Publication Page</div>
+      <a class="WebWorks_Breadcrumb_Link" href="Documents.9.1.html#1142741">Managing Documents</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Documents.9.5.html#1142741">Searching Nanoparticle Documents</a> &gt; Publication Page</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading2"><a name="1131749">Publication Page</a></div>
+      <div class="Heading2"><a name="1142741">Publication Page</a></div>
       <div class="Body_Text"><a name="1131750">After you have performed a document search (</a><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.5.html#1135396', '');">Searching Nanoparticle Documents</a></span>), the the <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Documents.9.6.html#1104802', '');">Nanoparticle Documents Search Results</a></span> page opens. Click the hypertext <span style="font-weight: bold;">Title</span> in the first column for a publication to open the Publication page.</div>
       <div class="Body_Text"><a name="1131801">This page lists the publication information that was defined when the publication was </a>submitted. Publication details are described in the following table.</div>
       <table id="1132303" class="Table_-_List" style="text-align: left;" cellspacing="2">
@@ -281,6 +281,7 @@
           WWHAddRelatedTopic("Update Publication Page", "caNanoLab", "Documents.9.11.html#1138948");
           WWHAddRelatedTopic("Update Report Page", "caNanoLab", "Documents.9.10.html#1139239");
           WWHAddRelatedTopic("Report Page", "caNanoLab", "Documents.9.7.html#1131363");
+          WWHAddRelatedTopic("Editing Documents", "caNanoLab", "Documents.9.9.html#1139185");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
